--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
    "scripts": {
       "dev": "vite-ssr --open",
       "build": "vite-ssr build",
-      "start": "node ./_app/server/main.js"
+      "start": "node ./server.js"
    },
    "dependencies": {
       "@vue/runtime-dom": "^3.1.5",
@@ -12,10 +12,10 @@
       "axios": "^0.21.1",
       "express": "^4.17.1",
       "node-fetch": "^2.6.1",
-      "pinia": "^2.0.0-beta.5",
       "vite-ssr": "^0.11.1",
       "vue": "^3.1.5",
-      "vue-router": "^4.0.10"
+      "vue-router": "^4.0.10",
+      "vuex": "^4.0.2"
    },
    "devDependencies": {
       "@types/express": "^4.17.13",
@@ -28,8 +28,6 @@
       "sass": "^1.35.2",
       "typescript": "^4.3.2",
       "vite": "^2.4.2",
-      "vite-plugin-windicss": "^1.2.4",
-      "vue-tsc": "^0.0.24",
-      "windicss": "^3.1.5"
+      "vue-tsc": "^0.0.24"
    }
 }
