--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
    "scripts": {
       "dev": "vite-ssr --open",
       "build": "vite-ssr build",
-      "start": "node ./server.js"
+      "start": "node ./server.js",
+      "lint": "npm run lint:script && npm run lint:style",
+      "lint:script": "eslint src/**/*.{ts,vue} --fix",
+      "lint:style": "stylelint src/**/*.{vue,scss} --fix"
    },
    "dependencies": {
       "@vue/runtime-dom": "^3.1.5",
@@ -18,14 +21,29 @@
       "vuex": "^4.0.2"
    },
    "devDependencies": {
+      "@babel/eslint-parser": "^7.16.5",
       "@types/express": "^4.17.13",
       "@types/fs-extra": "^9.0.12",
       "@types/node": "^16.9.3",
       "@types/node-fetch": "^2.5.11",
+      "@typescript-eslint/eslint-plugin": "^5.9.0",
+      "@typescript-eslint/parser": "^5.9.0",
       "@vitejs/plugin-vue": "^1.2.5",
       "@vue/compiler-sfc": "^3.1.5",
+      "@vue/eslint-config-typescript": "^10.0.0",
+      "eslint": "^8.6.0",
+      "eslint-config-airbnb-base": "^15.0.0",
+      "eslint-plugin-import": "^2.25.4",
+      "eslint-plugin-unused-imports": "^2.0.0",
+      "eslint-plugin-vue": "^8.3.0",
       "fs-extra": "^10.0.0",
+      "postcss-html": "^1.3.0",
       "sass": "^1.35.2",
+      "stylelint": "^14.2.0",
+      "stylelint-config-recommended-scss": "^5.0.2",
+      "stylelint-config-recommended-vue": "^1.1.0",
+      "stylelint-config-standard-scss": "^3.0.0",
+      "stylelint-order": "^5.0.0",
       "typescript": "^4.3.2",
       "vite": "^2.4.2",
       "vue-tsc": "^0.0.24"
