--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
    },
    "devDependencies": {
       "@babel/eslint-parser": "^7.16.5",
+      "@iconify-json/mdi": "^1.0.16",
       "@types/express": "^4.17.13",
       "@types/fs-extra": "^9.0.12",
       "@types/node": "^16.9.3",
@@ -45,6 +46,8 @@
       "stylelint-config-standard-scss": "^3.0.0",
       "stylelint-order": "^5.0.0",
       "typescript": "^4.3.2",
+      "unplugin-icons": "^0.13.0",
+      "unplugin-vue-components": "^0.17.17",
       "vite": "^2.4.2",
       "vue-tsc": "^0.0.24"
    }
