--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,10 @@
       "lib": ["esnext", "dom"],
       "paths": {
          "/*": ["./*"]
-      }
+      },
+     "types": [
+       "unplugin-icons/types/vue",
+     ]
    },
    "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
