--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       "node-fetch": "^2.6.1",
       "vite-ssr": "^0.11.1",
       "vue": "^3.1.5",
-      "vue-router": "^4.0.10",
+      "vue-router": "^4.0.12",
       "vuex": "^4.0.2"
    },
    "devDependencies": {
@@ -49,6 +49,7 @@
       "unplugin-icons": "^0.13.0",
       "unplugin-vue-components": "^0.17.17",
       "vite": "^2.4.2",
+      "vite-plugin-pages": "^0.20.2",
       "vue-tsc": "^0.0.24"
    }
 }
