--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
    "version": "0.0.0",
    "scripts": {
-      "dev": "vite-ssr --open",
-      "build": "vite-ssr build",
+      "dev": "vite dev",
+      "dev-ssr": "vite-ssr dev",
+      "build": "vite build",
+      "build-ssr": "vite-ssr build",
       "start": "node ./server.js",
       "lint": "npm run lint:script && npm run lint:style",
       "lint:script": "eslint src/**/*.{ts,vue} --fix",
@@ -13,6 +15,7 @@
       "@vue/server-renderer": "^3.1.5",
       "@vueuse/head": "^0.6.0",
       "axios": "^0.21.1",
+      "element-plus": "^2.0.1",
       "express": "^4.17.1",
       "node-fetch": "^2.6.1",
       "vite-ssr": "^0.11.1",
@@ -46,9 +49,10 @@
       "stylelint-config-standard-scss": "^3.0.0",
       "stylelint-order": "^5.0.0",
       "typescript": "^4.3.2",
+      "unplugin-auto-import": "^0.5.11",
       "unplugin-icons": "^0.13.0",
-      "unplugin-vue-components": "^0.17.17",
-      "vite": "^2.4.2",
+      "unplugin-vue-components": "^0.17.18",
+      "vite": "^2.7.13",
       "vite-plugin-pages": "^0.20.2",
       "vue-tsc": "^0.0.24"
    }
