--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,10 @@
       "esModuleInterop": true,
       "lib": ["esnext", "dom"],
       "paths": {
-         "/*": ["./*"]
+         "~/*": ["./src/*"]
       },
      "types": [
-       "unplugin-icons/types/vue",
+       "unplugin-icons/types/vue"
      ]
    },
    "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
